Fix overflow issue

--- a/resources/sass/_landing.scss
+++ b/resources/sass/_landing.scss
@@ -5,6 +5,7 @@ html, body {
   font-weight: 200;
   height: 100vh;
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1, h2 {
